# xmr-quant

./: .env.example  .gitignore  .pre-commit-config.yaml  MARKET_CYCLE_QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_bot.py  setup.py  setup_precommit.sh
.github/workflows/: lint.yml
config/: config.py
docs/: 00-START-HERE.md  01-GETTING-STARTED.md  02-SETUP.md  03-ARCHITECTURE.md  04-BTC-CORRELATION-STRATEGY.md  06-STATUS.md  DARKNET_MONITORING_GUIDE.md  DARKNET_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  MARKET-CYCLE-XGBOOST.md  REORGANIZATION.md
examples/: market_cycle_example.py
scripts/: setup_database.py  train_market_cycle_model.py
shared/: __init__.py  config.py
shared/database/: __init__.py  duckdb_client.py
shared/database/scripts/: check_db.py
shared/exchange/: __init__.py  kraken_client.py
shared/market_data/: __init__.py  ccxt_client.py  coinmarketcap.py  processor.py  storage.py
shared/market_data/scripts/: backfill_hourly_data.py  setup_database.py  test_kraken.py
shared/monitoring/: __init__.py  logger.py  metrics.py
shared/notification/: __init__.py  telegram_bot.py
shared/risk/: __init__.py  manager.py
src/core/: __init__.py  base.py  bot.py  data_aggregator.py  exchange_client.py  feature_engineering.py  market_cycle_indicators.py  market_regime.py  technical_indicators.py
src/darknet/: __init__.py  darknet_adoption_strategy.py  marketplace_scraper.py
src/strategies/: __init__.py  aggregator.py  base.py
src/strategies/core/: __init__.py  btc_correlation.py  trend_following.py
src/strategies/experimental/: __init__.py
src/strategies/experimental/darknet/: __init__.py  marketplace_scraper.py  strategy.py  tor_client.py
src/strategies/ml/: __init__.py  manager.py  market_cycle_xgboost.py  models.py  xgboost_strategy.py
src/strategies/news/: __init__.py  news_aggregator.py  news_classifier.py  strategy.py  twitter_client.py
src/utils/: market_data_collector.py
strategies/: README.md  __init__.py
tests/: test_btc_correlation.py  test_darknet_monitoring.py  test_news_monitoring.py  test_run.py
